fixed css for image cards to align correctly

--- a/src/components/ImageCard/ImageCard.css
+++ b/src/components/ImageCard/ImageCard.css
@@ -3,10 +3,14 @@
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
   width: 30%;
   height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-#imageContainer{
+#pexelsCard img{
   width: 100%;
+  height: 95%;
   
 }
 
